--- a/CSFG/Sources/css/Main/main.css
+++ b/CSFG/Sources/css/Main/main.css
@@ -67,7 +67,8 @@
 .text {
     font-weight: 500;
     color: #8a2435;
-    padding: 8px 15px;
+    /* padding: 8px 15px; */
+    margin: 3px;
 }
 
 
