commit with Gallery and About page

--- a/CSFG/Frame.Master
+++ b/CSFG/Frame.Master
@@ -1,4 +1,4 @@
-﻿    <%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Frame.master.cs" Inherits="CSFG.Frame" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Frame.master.cs" Inherits="CSFG.Frame" %>
 
 <!DOCTYPE html>
 
@@ -14,27 +14,33 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
+    <form id="mainForm" runat="server">
         <section>
             <div class="container">
                 <header>
-                    <img src="../Sources/img/csfg.png" alt="CSFG" class="logo"  />
+                    <img src="../Sources/img/csfg.png" alt="CSFG" class="logo" />
                     <ul>
-                        <li><a  href="../Default.aspx"  class="hed_home">Home</a></li>
-                        <li><a href="../Team.aspx"  class="hed_team">Team</a></li>
-                        <li><a href="../Contact.aspx" class="hed_contact">Contact</a></li>
-                        <li><a href="../About.aspx" class ="hed_about">About</a></li>
+                        <li><a href="../Default.aspx" class="hed_home">Home</a></li>
+                        <li><a href="../Team.aspx" class="hed_team">Team</a></li>
+                       <%-- <li><a href="../Contact.aspx" class="hed_contact">Contact</a></li>--%>
+                        <li><a href="../About.aspx" class="hed_about">About</a></li>
                     </ul>
-                    <a class="profileimg" href="../Sources/web/login.aspx" role="button">
+                    
+                    <ul><li><asp:LinkButton ID="txt_btn_id"  runat="server" href="../Utility/Login.aspx" Text="" class="loginid"></asp:LinkButton></li></ul> 
+
+                    <%-- profile image --%>
+                    <%--<a href="../Utility/Login.aspx" role="button">
+                        <asp:Label ID="txt_uer_id" runat="server" CssClass="loginid"></asp:Label>
                         <img src="../Sources/img/dept.jpg" class="profileimg" />
-                    </a>
+                    </a>--%>
+                    
                 </header>
                 <div class="panel">
                     <div class="content">
                         <ul style="list-style: none;">
                             <li><a href="../Utility/Notes.aspx">Notes </a></li>
-                            <li><a href="../Utility/Activities.aspx">Activities</a></li>
                             <li><a href="../Utility/Events.aspx">Events</a></li>
+                            <%--<li><a href="../Utility/Activities.aspx">Activities</a></li>--%>
                             <li><a href="../Utility/Gallery.aspx">Gallery</a></li>
                             <li><a href="../Utility/Upcomming.aspx">Upcomming</a></li>
                             <li><a href="../Utility/SendRequest.aspx">Upload</a></li>
@@ -44,7 +50,7 @@
                     </asp:ContentPlaceHolder>
                 </div>
                 <p class="copyrightText">
-                    *Copyright @CSFG-B22 All  right reserved.
+                    *Copyright @CSFG-B22 2023-2024 All right reserved.
                 </p>
             </div>
         </section>
