--- a/CSFG/Sources/css/Main/header.css
+++ b/CSFG/Sources/css/Main/header.css
@@ -16,6 +16,13 @@
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
 }
 
+.loginid {
+    text-decoration: none;
+    font-weight: 500;
+    color: #8a2435;
+    padding: 8px 15px;
+    border-radius: 25px;
+}
     header .logo {
         width:100px;
         color: #8a2435;
